--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,7 @@
     <version>1.0-SNAPSHOT</version>
 
     <properties>
-        <maven.compiler.source>1.8</maven.compiler.source> <!-- Downgrading to Java 8 -->
+        <maven.compiler.source>1.8</maven.compiler.source>
         <maven.compiler.target>1.8</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
@@ -35,7 +35,7 @@
         <dependency>
             <groupId>org.seleniumhq.selenium</groupId>
             <artifactId>selenium-java</artifactId>
-            <version>4.20.0</version> <!-- Latest version -->
+            <version>4.20.0</version>
         </dependency>
 
         <!-- JUnit for backward compatibility -->
@@ -57,14 +57,14 @@
         <dependency>
             <groupId>ch.qos.logback</groupId>
             <artifactId>logback-classic</artifactId>
-            <version>1.2.3</version> <!-- Adjust if needed -->
+            <version>1.2.3</version>
         </dependency>
 
         <!-- Logging (Log4j for SLF4J binding) -->
         <dependency>
             <groupId>org.apache.logging.log4j</groupId>
             <artifactId>log4j-slf4j-impl</artifactId>
-            <version>2.14.1</version> <!-- Adjust if needed -->
+            <version>2.14.1</version>
         </dependency>
 
     </dependencies>
